// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dripicons > should ensure the export names have not changed unexpectedly 1`] = `
[
  "dripAlarm",
  "dripAlignCenter",
  "dripAlignJustify",
  "dripAlignLeft",
  "dripAlignRight",
  "dripAnchor",
  "dripArchive",
  "dripArrowDown",
  "dripArrowLeft",
  "dripArrowRight",
  "dripArrowThinDown",
  "dripArrowThinLeft",
  "dripArrowThinRight",
  "dripArrowThinUp",
  "dripArrowUp",
  "dripArticle",
  "dripBackspace",
  "dripBasket",
  "dripBasketball",
  "dripBatteryEmpty",
  "dripBatteryFull",
  "dripBatteryLow",
  "dripBatteryMedium",
  "dripBell",
  "dripBlog",
  "dripBluetooth",
  "dripBold",
  "dripBookmark",
  "dripBookmarks",
  "dripBox",
  "dripBriefcase",
  "dripBrightnessLow",
  "dripBrightnessMax",
  "dripBrightnessMedium",
  "dripBroadcast",
  "dripBrowserUpload",
  "dripBrowser",
  "dripBrush",
  "dripCalendar",
  "dripCamcorder",
  "dripCamera",
  "dripCard",
  "dripCart",
  "dripChecklist",
  "dripCheckmark",
  "dripChevronDown",
  "dripChevronLeft",
  "dripChevronRight",
  "dripChevronUp",
  "dripClipboard",
  "dripClock",
  "dripClockwise",
  "dripCloudDownload",
  "dripCloudUpload",
  "dripCloud",
  "dripCode",
  "dripContract2",
  "dripContract",
  "dripConversation",
  "dripCopy",
  "dripCrop",
  "dripCross",
  "dripCrosshair",
  "dripCutlery",
  "dripDeviceDesktop",
  "dripDeviceMobile",
  "dripDeviceTablet",
  "dripDirection",
  "dripDisc",
  "dripDocumentDelete",
  "dripDocumentEdit",
  "dripDocumentNew",
  "dripDocumentRemove",
  "dripDocument",
  "dripDot",
  "dripDots2",
  "dripDots3",
  "dripDownload",
  "dripDuplicate",
  "dripEnter",
  "dripExit",
  "dripExpand2",
  "dripExpand",
  "dripExperiment",
  "dripExport",
  "dripFeed",
  "dripFlag",
  "dripFlashlight",
  "dripFolderOpen",
  "dripFolder",
  "dripForward",
  "dripGaming",
  "dripGear",
  "dripGraduation",
  "dripGraphBar",
  "dripGraphLine",
  "dripGraphPie",
  "dripHeadset",
  "dripHeart",
  "dripHelp",
  "dripHome",
  "dripHourglass",
  "dripInbox",
  "dripInformation",
  "dripItalic",
  "dripJewel",
  "dripLifting",
  "dripLightbulb",
  "dripLinkBroken",
  "dripLink",
  "dripList",
  "dripLoading",
  "dripLocation",
  "dripLockOpen",
  "dripLock",
  "dripMail",
  "dripMap",
  "dripMediaLoop",
  "dripMediaNext",
  "dripMediaPause",
  "dripMediaPlay",
  "dripMediaPrevious",
  "dripMediaRecord",
  "dripMediaShuffle",
  "dripMediaStop",
  "dripMedical",
  "dripMenu",
  "dripMessage",
  "dripMeter",
  "dripMicrophone",
  "dripMinus",
  "dripMonitor",
  "dripMove",
  "dripMusic",
  "dripNetwork1",
  "dripNetwork2",
  "dripNetwork3",
  "dripNetwork4",
  "dripNetwork5",
  "dripPamphlet",
  "dripPaperclip",
  "dripPencil",
  "dripPhone",
  "dripPhotoGroup",
  "dripPhoto",
  "dripPill",
  "dripPin",
  "dripPlus",
  "dripPower",
  "dripPreview",
  "dripPrint",
  "dripPulse",
  "dripQuestion",
  "dripReplyAll",
  "dripReply",
  "dripReturn",
  "dripRetweet",
  "dripRocket",
  "dripScale",
  "dripSearch",
  "dripShoppingBag",
  "dripSkip",
  "dripStack",
  "dripStar",
  "dripStopwatch",
  "dripStore",
  "dripSuitcase",
  "dripSwap",
  "dripTagDelete",
  "dripTag",
  "dripTags",
  "dripThumbsDown",
  "dripThumbsUp",
  "dripTicket",
  "dripTimeReverse",
  "dripToDo",
  "dripToggles",
  "dripTrash",
  "dripTrophy",
  "dripUpload",
  "dripUserGroup",
  "dripUserId",
  "dripUser",
  "dripVibrate",
  "dripViewApps",
  "dripViewListLarge",
  "dripViewList",
  "dripViewThumb",
  "dripVolumeFull",
  "dripVolumeLow",
  "dripVolumeMedium",
  "dripVolumeOff",
  "dripWallet",
  "dripWarning",
  "dripWeb",
  "dripWeight",
  "dripWifi",
  "dripWrong",
  "dripZoomIn",
  "dripZoomOut",
]
`;

exports[`Dripicons should ensure the export names have not changed unexpectedly 1`] = `
Array [
  "dripAlarm",
  "dripAlignCenter",
  "dripAlignJustify",
  "dripAlignLeft",
  "dripAlignRight",
  "dripAnchor",
  "dripArchive",
  "dripArrowDown",
  "dripArrowLeft",
  "dripArrowRight",
  "dripArrowThinDown",
  "dripArrowThinLeft",
  "dripArrowThinRight",
  "dripArrowThinUp",
  "dripArrowUp",
  "dripArticle",
  "dripBackspace",
  "dripBasket",
  "dripBasketball",
  "dripBatteryEmpty",
  "dripBatteryFull",
  "dripBatteryLow",
  "dripBatteryMedium",
  "dripBell",
  "dripBlog",
  "dripBluetooth",
  "dripBold",
  "dripBookmark",
  "dripBookmarks",
  "dripBox",
  "dripBriefcase",
  "dripBrightnessLow",
  "dripBrightnessMax",
  "dripBrightnessMedium",
  "dripBroadcast",
  "dripBrowserUpload",
  "dripBrowser",
  "dripBrush",
  "dripCalendar",
  "dripCamcorder",
  "dripCamera",
  "dripCard",
  "dripCart",
  "dripChecklist",
  "dripCheckmark",
  "dripChevronDown",
  "dripChevronLeft",
  "dripChevronRight",
  "dripChevronUp",
  "dripClipboard",
  "dripClock",
  "dripClockwise",
  "dripCloudDownload",
  "dripCloudUpload",
  "dripCloud",
  "dripCode",
  "dripContract2",
  "dripContract",
  "dripConversation",
  "dripCopy",
  "dripCrop",
  "dripCross",
  "dripCrosshair",
  "dripCutlery",
  "dripDeviceDesktop",
  "dripDeviceMobile",
  "dripDeviceTablet",
  "dripDirection",
  "dripDisc",
  "dripDocumentDelete",
  "dripDocumentEdit",
  "dripDocumentNew",
  "dripDocumentRemove",
  "dripDocument",
  "dripDot",
  "dripDots2",
  "dripDots3",
  "dripDownload",
  "dripDuplicate",
  "dripEnter",
  "dripExit",
  "dripExpand2",
  "dripExpand",
  "dripExperiment",
  "dripExport",
  "dripFeed",
  "dripFlag",
  "dripFlashlight",
  "dripFolderOpen",
  "dripFolder",
  "dripForward",
  "dripGaming",
  "dripGear",
  "dripGraduation",
  "dripGraphBar",
  "dripGraphLine",
  "dripGraphPie",
  "dripHeadset",
  "dripHeart",
  "dripHelp",
  "dripHome",
  "dripHourglass",
  "dripInbox",
  "dripInformation",
  "dripItalic",
  "dripJewel",
  "dripLifting",
  "dripLightbulb",
  "dripLinkBroken",
  "dripLink",
  "dripList",
  "dripLoading",
  "dripLocation",
  "dripLockOpen",
  "dripLock",
  "dripMail",
  "dripMap",
  "dripMediaLoop",
  "dripMediaNext",
  "dripMediaPause",
  "dripMediaPlay",
  "dripMediaPrevious",
  "dripMediaRecord",
  "dripMediaShuffle",
  "dripMediaStop",
  "dripMedical",
  "dripMenu",
  "dripMessage",
  "dripMeter",
  "dripMicrophone",
  "dripMinus",
  "dripMonitor",
  "dripMove",
  "dripMusic",
  "dripNetwork1",
  "dripNetwork2",
  "dripNetwork3",
  "dripNetwork4",
  "dripNetwork5",
  "dripPamphlet",
  "dripPaperclip",
  "dripPencil",
  "dripPhone",
  "dripPhotoGroup",
  "dripPhoto",
  "dripPill",
  "dripPin",
  "dripPlus",
  "dripPower",
  "dripPreview",
  "dripPrint",
  "dripPulse",
  "dripQuestion",
  "dripReplyAll",
  "dripReply",
  "dripReturn",
  "dripRetweet",
  "dripRocket",
  "dripScale",
  "dripSearch",
  "dripShoppingBag",
  "dripSkip",
  "dripStack",
  "dripStar",
  "dripStopwatch",
  "dripStore",
  "dripSuitcase",
  "dripSwap",
  "dripTagDelete",
  "dripTag",
  "dripTags",
  "dripThumbsDown",
  "dripThumbsUp",
  "dripTicket",
  "dripTimeReverse",
  "dripToDo",
  "dripToggles",
  "dripTrash",
  "dripTrophy",
  "dripUpload",
  "dripUserGroup",
  "dripUserId",
  "dripUser",
  "dripVibrate",
  "dripViewApps",
  "dripViewListLarge",
  "dripViewList",
  "dripViewThumb",
  "dripVolumeFull",
  "dripVolumeLow",
  "dripVolumeMedium",
  "dripVolumeOff",
  "dripWallet",
  "dripWarning",
  "dripWeb",
  "dripWeight",
  "dripWifi",
  "dripWrong",
  "dripZoomIn",
  "dripZoomOut",
]
`;
